fix alignment of interface description and first th/td

--- a/packages/docs-theme/src/styles/_api.scss
+++ b/packages/docs-theme/src/styles/_api.scss
@@ -28,17 +28,26 @@
     bottom: 0;
     margin: 0;
     box-shadow: $pt-elevation-shadow-4;
-    background: $white;
+    background: $sidebar-background-color;
     width: 50vw;
     min-width: $pt-grid-size * 50;
     max-width: $pt-grid-size * 80;
     padding: 0;
+
+    .pt-dark & {
+      background-color: $dark-sidebar-background-color;
+    }
   }
 
   .docs-interface-header {
     flex: 0 0 auto;
     margin: 0;
     padding: $pt-grid-size ($pt-grid-size * 2);
+
+    // optional interface description
+    + .docs-section {
+      padding: $pt-grid-size ($pt-grid-size * 2) 0;
+    }
   }
 
   .docs-modifiers-table {
